adicionei texto no title

--- a/empresa.html
+++ b/empresa.html
@@ -46,7 +46,7 @@
     
     </figure>
     <div id="em">
-        <h1 id="contas">Sobre nós</h1>
+        <h1 id="contas"></h1>
     </div>
     <script>
         $(function(){
